<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.release.inspectionapp.inspection.ui.InspectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inspection.ui.InspectionsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btnSignOUt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/signout"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        style="@style/InspectionApp.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:text="@string/start"
        android:visibility="@{viewModel.btnStartVisibility, default=gone}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoStoredInspections" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNoStoredInspections"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:layout_width="match_parent"
        android:visibility="@{viewModel.noStoredInspectionsVisibility, default=gone}"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_6"
        android:layout_marginTop="@dimen/space_10"
        android:gravity="center"
        android:text="@string/no_inspection_exists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOUt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_saved_inspections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="@{viewModel.rvVisibility, default=gone}"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_inspection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOUt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        style="@style/InspectionApp.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4.25"
        android:text="@string/send"
        android:visibility="@{viewModel.btnSendVisibility, default=gone}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_saved_inspections" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>